# Visualising-Sigma16

./: .gitignore  Cargo.toml  MANUAL.md  README.md  Serve.nginx  assemble  index.html  plan  pointer_array_visualiser.txt  pointer_array_visualiser2.txt  test
assets/: manifest.json
src/: app.rs  code_editor.rs  gui.rs  lib.rs  main.rs
src/assembler/: assembler.rs  assembler.rs.old  code.rs  error.rs  instructions.rs  mod.rs  tokens.rs
src/gui/: app.rs  code_editor.rs  code_runner.rs  data_flow.rs  exercises.rs  gui.rs  mod.rs  monitor.rs  syntax_highlighting.rs  syntax_highlighting_runner.rs  util.rs
src/interpreter/: history.rs  interpreter.rs  memory.rs  mod.rs  opcodes.rs  register.rs  state.rs
src/tui/: tui.rs
