[package]
name = "Visualising-Sigma16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
regex = "1.11.0"
logos = { version = "0.14.2", features = ["debug"] }
serde = { version = "1.0.213", features = ["derive"] }
egui = "0.29.1"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
web-sys = "0.3.70"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.95"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[lints.rust]
unsafe_code = "allow"

[lints.clippy]
correctness = "allow"
suspicious = "allow"
complexity = "allow"
perf = "allow"
style = "allow"
pedantic = "allow"
cargo = "allow"