[package]
name = "Visualising-Sigma16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "cli"
#path = "src/cli/main.rs"
#
#[[bin]]
#name = "gui"
#path = "src/gui/main.rs"

[package.metadata.docs.rs]
all-features = true
target_arch = "wasm32"

[dependencies]
#tui = "0.19"
#crossterm = "0.25"
regex = "1.11.0"
logos = { version = "0.14.2", features = ["debug"] }
serde = { version = "1.0.213", features = ["derive"] }
egui = "0.29.1"
egui_dock = "0.14.0"
egui_extras = { version = "0.29.1", features = ["serde", "syntect"] }
enum-map = "2.7.3"
eframe = { version = "0.29", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
web-sys = { version = "0.3.70", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

