[package]
name = "Visualising-Sigma16"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
target_arch = "wasm32"

[dependencies]
regex = "1.11.0"
logos = { version = "0.14.2" }
serde = { version = "1.0.213", features = ["derive"] }
egui = "0.31.0"
egui_dock = "0.14.0"
egui_extras = { version = "0.31.0", features = ["serde", "syntect"] }
enum-map = "2.7.3"
eframe = { version = "0.31.0", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
web-sys = { version = "0.3.70", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4"
serde-diff = "0.4.1"
serde_json = "1.0.138"
uuid = { version = "1.13.2", features = ["v4", "js"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

